--- a/SHEEPS HAPPENS/desktop.ini
+++ b/SHEEPS HAPPENS/desktop.ini
@@ -1,7 +1,7 @@
 [.ShellClassInfo]
-IconResource=C:\Users\fefom\Desktop\SHEEPS HAPPENS\SHEEP_HAPPENS_ICON.ico,0
+IconResource=C:\Users\fefom\Desktop\SHEEPS HAPPENS\assets\SHEEP_HAPPENS_ICON.ico,0
 [ViewState]
 Mode=
 Vid=
 FolderType=Generic
-Logo=C:\Users\fefom\Desktop\SHEEPS HAPPENS\SHEEP_HAPPENS_ICON.ico
+Logo=C:\Users\fefom\Desktop\SHEEPS HAPPENS\assets\SHEEP_HAPPENS_ICON.ico
